cmake_minimum_required(VERSION 3.16)
file(GLOB_RECURSE CPP_SOURCE_FILES "*.cpp")
file(GLOB_RECURSE H_HEADER_FILES "*.h")
file(GLOB_RECURSE HTML_PAGES "../site/*.html")
set(MANIFEST ${CPP_SOURCE_FILES} ${H_HEADER_FILES} ${HTML_PAGES})
add_executable(server ${MANIFEST})
target_include_directories(server SYSTEM PRIVATE "${PROJECT_SOURCE_DIR}/vendor/restbed/source")
option(PRINTER_SERVER_RELEASE "Specifies whether this is a release build" OFF)
if(PRINTER_SERVER_RELEASE)
	target_compile_definitions(server PRIVATE PORT=80)
else()
	target_compile_definitions(server PRIVATE PORT=8080)
endif()
if(WIN32)
	add_custom_command(TARGET server POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different "$<TARGET_FILE_DIR:restbed-shared>/restbed-shared.dll" $<TARGET_FILE_DIR:server>)
	set(RESTBED_LIB restbed-shared)
else()
	set(RESTBED_LIB restbed-static)
endif()
target_link_libraries(server ${RESTBED_LIB} libslic3r)